Fixing z-index of tooltip to not appear below the shutter

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -20,7 +20,7 @@ animation:          fadeOut 400ms 1 ease-in;
   #graph{width:100%; height:250px; margin:20px 0 30px; -webkit-tap-highlight-color: rgba(0,0,0,0);}
     .tickLabel,.legendLabel{color:#dedbc1; font-size:12px;}
     .legendColorBox>div{border:none!important; padding:0!important;}
-    #tooltip{padding:10px; background:#fff; margin:-60px 0 0 -75px; width:150px; text-align: center;}
+    #tooltip{padding:10px; background:#fff; margin:-60px 0 0 -75px; width:150px; text-align: center; z-index:1000;}
       #tooltip:before{content:''; position:absolute; bottom:-20px; left:50%; margin-left:-20px; border:10px solid white; border-color:white transparent transparent transparent; }
     
 .tool-list li{border-bottom:1px solid #383838;border-top:1px solid #585859; font-size: 16px;}
